--- a/app/assets/stylesheets/client/home/tour.scss
+++ b/app/assets/stylesheets/client/home/tour.scss
@@ -1,4 +1,4 @@
-@import 'config-client';
+@import 'base-client';
 
 .top-bg {
   background-image:url($image-path+"/ex/special_top_img.jpg");
@@ -28,8 +28,9 @@
 }
 
 .content-cont {
-  padding:30px 0 50px;
-  width:900px;
+  padding:30px 15px 50px;
+  width:100%;
+  max-width:900px;
   margin:0 auto;
   .indexes {
     margin:35px 0;
@@ -76,9 +77,9 @@
       }
     }
     .it {
-      margin-right:44px;
+      margin-right:1%;
       float:left;
-      width:270px;
+      width:32%;
       .image {
         width:100%;
         height:195px;
