--- a/app/views/client/home/faq.html.erb
+++ b/app/views/client/home/faq.html.erb
@@ -22,8 +22,8 @@
           <span class="title">{{notice.title}}</span>
         </div>
       </div>
-      <div class="notice-content" ng-show="!notice.collapsed">
-        <div class="content html-content" ng-bind-html="ghelper.html_view(notice.content)"></div>
+      <div class="notice-content" uib-collapse="notice.collapsed">
+        <div class="content html-content" ng-bind-html="gh.html_view(notice.content)"></div>
       </div>
     </div>
   </div>
