--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
 <html ng-cloak ng-app="psApp">
 <head>
-  <title><%=@title%></title>
-	<meta charset="utf-8">
+  <title><%=@global_var["meta"]["title"]%></title>
+  <meta charset="UTF-8">
   <link rel="shortcut icon" href="<%=@web_img_path%>/favicon.png" >
   <link rel="apple-touch-icon" href="<%=@web_img_path%>/favicon.png" >
-  <!-- <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0"> -->
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta property="og:type" content="<%=@meta_type%>">
-  <meta property="og:site_name" content="<%=@meta_site_name%>">
-  <meta property="og:url" content="<%=@meta_url%>">
-  <meta property="og:title" content="<%=@meta_title%>">
-  <meta property="og:image" content="<%=@meta_image%>">
-  <meta property="og:description" content="<%=@meta_description%>">
-  <meta property="description" content="<%=@meta_description%>">
+  <meta property="og:type" content="<%=@global_var["meta"]["type"]%>">
+  <meta property="og:site_name" content="<%=@global_var["meta"]["site_name"]%>">
+  <meta property="og:url" content="<%=@global_var["meta"]["url"]%>">
+  <meta property="og:title" content="<%=@global_var["meta"]["title"]%>">
+  <meta property="og:image" content="<%=@global_var["meta"]["image"]%>">
+  <meta property="og:description" content="<%=@global_var["meta"]["description"]%>">
+  <meta property="description" content="<%=@global_var["meta"]["description"]%>">
   <%= include_gon %>
   <%= stylesheet_link_tag "#{params[:controller]}/#{params[:action]}", media: 'all' %>
-  <%= javascript_include_tag 'application-client', @js_controller_action %>
+  <%= javascript_include_tag 'application-client', @global_var["js_include"] %>
   <script>
-    var font_url = "http://cdn.jsdelivr.net/font-nanum/1.0/nanumbarungothic/nanumbarungothic.css";
-    if(!cookie("fonts")) {
+    font_url = "http://cdn.jsdelivr.net/font-nanum/1.0/nanumbarungothic/nanumbarungothic.css";
+    if(!Cookies("fonts-nanumbarun")) {
       loadCSS(font_url);
-      cookie("fonts", font_url, 365);
+      Cookies.set("fonts-nanumbarun", font_url, {expires: 3600*24*180});
     }
   </script>
   <!--[if lt IE 10]>
-  <%= javascript_include_tag 'lib/placeholders.min' %>
+  <%= javascript_include_tag 'placeholders' %>
   <![endif]-->
   <%= csrf_meta_tags %>
 </head>
 
-<body class="<%="#{params[:controller].parameterize} #{params[:action]}"%>" ng-controller="MainCtrl">
+<body class="<%="#{params[:controller].parameterize} #{params[:action]}"%>" ng-controller="MainCtrl" ng-class="{'mobile-os': isMobile}">
   <div id="app-container" ng-controller="<%="#{params[:controller].split("/").map{|a| a.capitalize}.join}#{params[:action].split("_").map{|a| a.capitalize}.join}"%>">
     <div class="ps-header">
       <div class="logo-cont" url="<%=client_home_path%>">
         <!-- <i class="fa fa-home fa-2x"></i> -->
         <span>위미향</span>
       </div>
-      <ul class="menu-cont">
+      <span class="menu-toggle" ng-click="menuCollapse = !menuCollapse">메뉴</span>
+      <ul class="menu-cont" uib-collapse="!menuCollapse && isMobileWidth">
         <li class="<%="active" if @menu[:home].include?(@current_uri) %>"><a href="<%=client_home_path%>"><span>홈</span></a></li>
         <li class="<%="active" if @menu[:room].include?(@current_uri) %>"><a href="<%=room_index_path%>"><span>펜션둘러보기</span></a></li>
-        <li class="<%="active" if @menu[:special].include?(@current_uri) %>"><a href="<%=client_special_path%>"><span>특별함</span></a></li>
+        <li class="<%="active" if @menu[:special].include?(@current_uri) %>"><a href="<%=client_tour_path%>"><span>관광지</span></a></li>
         <li class="<%="active" if @current_uri == "" %>"><a href="#"><span>예약</span></a></li>
         <li class="<%="active" if @menu[:customer].include?(@current_uri) %>"><a href="<%=client_notice_path%>"><span>고객센터</span></a></li>
       </ul>
