--- a/app/assets/stylesheets/client/home/tour.scss
+++ b/app/assets/stylesheets/client/home/tour.scss
@@ -77,9 +77,10 @@
       }
     }
     .it {
-      margin-right:1%;
+      margin-right:2%;
       float:left;
       width:32%;
+      margin-bottom:15px;
       .image {
         width:100%;
         height:195px;
@@ -111,8 +112,32 @@
         margin-top:18px;
         color:#999;
         font-size:12px;
-        line-height:18px;
+        line-height:20px;
       }
     }
   }
 }
+
+@media screen and (max-width: $mobile-width) {
+  .content-cont {
+    .items {
+      .it:nth-child(3n) {
+        margin-right:auto;
+      }
+      .it:nth-child(2n) {
+        margin-right:0;
+      }
+      .it {
+        margin-right:4%;
+        width:48%;
+        .subtit {
+          .time {
+            width:100%;
+          }
+        }
+      }
+    }
+  }
+
+}
+
