[작업] client, admin - 메뉴별 상단이미지 & 예약페이지

--- a/app/assets/stylesheets/base-client.scss
+++ b/app/assets/stylesheets/base-client.scss
@@ -171,3 +171,16 @@ body, html {
     }
   }
 }
+
+.html-view {
+  line-height:21px;
+  iframe, embed, img {
+    max-width:100%;
+  }
+  p {
+    font-size:15px;
+    line-height:inherit;
+    letter-spacing:-1px !important;
+    margin-bottom:0;
+  }
+}
