--- a/app/assets/stylesheets/client/room/view.scss
+++ b/app/assets/stylesheets/client/room/view.scss
@@ -1,32 +1,6 @@
-@import 'config-client';
+@import 'base-client';
+@import "client/top-bg";
 @import 'lib/set-blueimp';
-
-.top-bg {
-  background-image:url($image-path+"/ex/room_top_img.jpg");
-  background-size:cover;
-  background-position:center;
-  height:150px;
-  .backdrop {
-    @include background-image(linear-gradient(180deg, rgba(0,0,0,0), rgba(0,0,0,0.4)));
-    filter:progid:DXImageTransform.Microsoft.Gradient(gradientType=0, startColorStr="#00ffffff", endColorStr="#77000000")\9;
-    z-index:9;
-    width:100%;
-    height:100%;
-    position:relative;
-    .ctt {
-      text-align:center;
-      span {
-        display:block;
-        color:white;
-        font-size:14px;
-      }
-      span:last-child {
-        font-size:12px;
-        margin-top:20px;
-      }
-    }
-  }
-}
 
 .top-image {
   position:relative;
