--- a/app/views/client/home/notice.html.erb
+++ b/app/views/client/home/notice.html.erb
@@ -1,12 +1,4 @@
-<div class="top-bg">
-  <div class="backdrop">
-    <div class="ctt" vertical-center=".backdrop">
-      <span>아름다운 향기의 추억</span>
-      <span>위미향</span>
-    </div>
-  </div>
-</div>
-
+<%= render "fragment/client/top" %>
 
 <div class="content-cont">
   <div class="indexes">
