[작업] admin - 로그인/로그아웃

--- a/app/views/fragment/admin/_header.html.erb
+++ b/app/views/fragment/admin/_header.html.erb
@@ -9,5 +9,18 @@
     </div>
     <a href="javascript:;" class="menu-toggler responsive-toggler" data-toggle="collapse" data-target=".navbar-collapse">
     </a>
+		<div class="page-top">
+			<div class="top-menu">
+				<ul class="nav navbar-nav pull-right">
+					<li class="separator hide">
+					</li>
+          <li>
+            <a href="<%=admin_logout_path%>" class="logout">
+              <i class="icon-logout"></i>로그아웃
+            </a>
+          </li>
+				</ul>
+			</div>
+		</div>
   </div>
 </div>
