[작업] client - footer 정렬

--- a/app/assets/stylesheets/base-client.scss
+++ b/app/assets/stylesheets/base-client.scss
@@ -158,7 +158,7 @@ body, html {
     height:33px;
   }
   .ctt {
-    text-align:left;
+    text-align:center;
     float:left;
     font-size:12px;
     line-height:20px;
