--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -52,10 +52,10 @@
 
     <div class="ps-footer">
       <div class="cont">
-        <img src="" alt="로고" class="logo">
         <div class="ctt">
-          상호 : 위미향 / 제주 서귀포시 남원읍 위미중앙로246번길 10 / 대표 : OOO / 예약문의 : 010-0000-0000 / 카카오톡 아이디 : oooooo<br>
-          사업자등록번호 : 000-00-00000 / 통신판매업신고번호 : <br>
+          상호 : 위미향 / 제주 서귀포시 남원읍 위미중앙로246번길 10<br>
+          예약문의 : 010-0000-0000 / 카카오톡 아이디 : oooooo<br>
+          대표: OOO / 사업자등록번호 : 000-00-00000 / 통신판매업신고번호 : <br>
           <div class="copyright">
             Copyright &copy; 위미향.&nbsp;&nbsp;ALL&nbsp;&nbsp;RIGHTS&nbsp;&nbsp;RESERVED.
           </div>
