--- a/app/assets/stylesheets/base-client.scss
+++ b/app/assets/stylesheets/base-client.scss
@@ -15,6 +15,7 @@ body, html {
   text-align:center;
   z-index:10000;
   background-color:white;
+  border-bottom:1px solid black;
   .logo-cont {
     color:#000;
     display:inline-block;
@@ -111,10 +112,10 @@ body, html {
       display:block;
     }
     .menu-cont {
-      margin-top:0;
-      border-top:1px solid #000;
+      margin-top:1px;
       li {
         display:block;
+        border-top:1px solid black;
         &:hover {
           background-color:#444;
           a {
