--- a/app/assets/stylesheets/client/home/reserve.scss
+++ b/app/assets/stylesheets/client/home/reserve.scss
@@ -3,7 +3,93 @@
 
 .content-cont {
   width:100%;
-  max-width:745px;
+  max-width:980px;
   margin:0 auto;
-  padding:30px 15px 40px;
+  padding:25px 15px 40px;
+  font-size:13px;
+  line-height:21px;
+  letter-spacing:0px;
+  .title {
+    text-align:center;
+    font-size:24px;
+  }
+  .subtit {
+    font-size:16px;
+    margin:40px 0 20px;
+    &:before {
+      display: block;
+      content: " ";
+      height: 1px;
+      width: 40px;
+      background-color: #000;
+      margin-bottom: 10px;
+    }
+  }
+  .contact {
+    margin-top:22px;
+    padding:20px 0;
+    text-align:center;
+    background-color:#eee;
+    span {
+      display:block;
+    }
+    .item {
+      margin-bottom:20px;
+      .tit {
+        font-size:13px;
+        color:#888;
+      }
+      .ctt {
+        color:#000;
+        font-weight:bold;
+        font-size:14px;
+      }
+    }
+    .item:last-child {
+      margin-bottom:0;
+    }
+  }
+  table {
+    width:100%;
+    text-align:center;
+    margin:15px 0;
+    td, th {
+      padding:10px 15px;
+      border:#eee 1px solid;
+    }
+    th {
+      text-align:center;
+      font-weight:normal;
+      color:#777;
+    }
+    td:first-child {
+      font-weight:bold;
+    }
+    td {
+      color:black;
+    }
+  }
+  .mini {
+    font-size:13px;
+  }
+
+  ul {
+    margin-left:30px;
+    li {
+      line-height:24px;
+    }
+  }
+  .disc-list {
+    li {
+      list-style:disc;
+    }
+  }
+  .sub-list {
+    margin-left:20px;
+    li {
+      list-style:decimal;
+      font-size:12px;
+    }
+  }
 }
+
