--- a/app/assets/stylesheets/client/room/index.scss
+++ b/app/assets/stylesheets/client/room/index.scss
@@ -4,6 +4,7 @@
 .content-cont {
   padding:30px 0 50px;
   .top-ctt {
+    padding:0 15px;
     p {
       margin:0 auto 24px;
       text-align:center;
@@ -24,13 +25,10 @@
   }
   .room-list {
     margin:0 auto;
-    width:780px;
-    .room:nth-child(odd) {
-      float:left;
-    }
-    .room:nth-child(even) {
-      float:right;
-    }
+    width:100%;
+    max-width:780px;
+    padding:0 15px;
+
     .room:hover {
       .r-img {
         .backdrop {
@@ -52,12 +50,15 @@
       .r-img {
         background-image:url($image-path+"/ex/room_2.jpg");
       }
+      margin-right:0;
     }
     .room {
-      width:46%;
+      float:left;
+      width:48%;
+      margin-right:4%;
       .r-img {
         width:100%;
-        height:300px;
+        height:250px;
         background-size:cover;
         background-position:center;
         .backdrop {
@@ -100,6 +101,37 @@
           background-color:white;
           content:"";
           transition:width 0.2s;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $mobile-width) {
+  .content-cont {
+    .room-list {
+      .room {
+        float:none;
+        width:100%;
+        margin-bottom:15px;
+        display:block;
+        .r-img {
+          height:200px;
+        }
+        .detail-btn {
+          position:absolute;
+          top:0;
+          bottom:auto;
+          text-align:center;
+          padding:4px 7px;
+          background-color:rgba(0,0,0,0.9);
+          span {
+            color:white;
+          }
+          span:after {
+            bottom:4px;
+            left:8px;
+          }
         }
       }
     }
