--- a/app/views/client/home/reserve.html.erb
+++ b/app/views/client/home/reserve.html.erb
@@ -1,6 +1,83 @@
 <%= render "fragment/client/top" %>
 
 <div class="content-cont">
-  <div class="html-view" ng-bind-html="gh.html_view(reserve)">
+  <h1 class="title">예약안내</h1>
+
+  <h3 class="subtit">요금안내</h3>
+  <table>
+    <tr>
+    	<th>객실명</th>
+    	<th>평수(/개별마당)</th>
+    	<th>기준</th>
+    	<th>최대</th>
+    	<th>주중</th>
+    	<th>금요일</th>
+    	<th>주말</th>
+    </tr>
+    <tr>
+    	<td>W101</td>
+    	<td>12평/10평</td>
+    	<td>15명</td>
+    	<td>20명</td>
+    	<td>50만원</td>
+    	<td>55만원</td>
+    	<td>50만원</td>
+    </tr>
+    <tr>
+    	<td>W102</td>
+    	<td>12평/10평</td>
+    	<td>15명</td>
+    	<td>20명</td>
+    	<td>50만원</td>
+    	<td>55만원</td>
+    	<td>50만원</td>
+    </tr>
+  </table>
+  <div class="mini">인원추가 요금: 미취학아동(1인/10,000원), 초등학생부터(1인/20,000원)</div>
+  <div class="mini">유아도 인원수에 포함되며 10,000원의 추가요금이 있습니다.</div>
+
+  <div class="contact">
+    <div class="item">
+      <span class="tit">예약문의전화</span>
+      <span class="ctt">010-0000-0000</span>
+    </div>
+    <div class="item">
+      <span class="tit">카카오톡 아이디</span>
+      <span class="ctt">ooooooo</span>
+    </div>
   </div>
+  <h3 class="subtit">객실 이용시 확인사항</h3>
+  <ul class="disc-list">
+    <li>CHECK IN 은 오후 3시부터이며 CHECKOUT 시작은 오전 11시까지 입니다.</li>
+    <li>
+      CHECK OUT시 객실정리는 다음 사항을 유의하시기 바랍니다.
+      <ul class="sub-list">
+        <li>설거지를 하신후 그릇은 건조대에 그대로 두시기 바랍니다.</li>
+        <li>쓰레기는 비치해둔 분리수거통에 담아서 현관 앞에 놔두시기 바랍니다.</li>
+        <li>객실비품은 어메니티를 제외하고 반출하실 수 없습니다.</li>
+      </ul>
+    </li>
+    <li>쾌적한 공간이용을 위하여 실내에서의 튀김, 생선요리, 고기 등 기름기가 많은 음식조리를 금합니다.</li>
+  </ul>
+
+  <h3 class="subtit">입금전 확인사항</h3>
+  <ul class="disc-list">
+    <li>입금 후 예약취소시 고객센터로 연락을 하셔서 환불안내를 받으시기 바랍니다.</li>
+    <li>환불기준은 아래와 같으므로 신중하게 예약을 취소 및 변경하시기 당부드립니다.</li>
+    <li>예약후 취소시에는 기간과 상관없이 10% 위약금이 발생합니다.</li>
+  </ul>
+  <table>
+    <tr>
+    	<th>2일전~당일</th>
+    	<th>4일전~3일전</th>
+    	<th>6일전~5일전</th>
+    	<th>예약취소시</th>
+    </tr>
+    <tr>
+      <td>0%</td>
+      <td>50%</td>
+      <td>70%</td>
+      <td>90%</td>
+    </tr>
+  </table>
 </div>
