--- a/app/assets/stylesheets/client/top-bg.scss
+++ b/app/assets/stylesheets/client/top-bg.scss
@@ -4,7 +4,8 @@
   background-position:center;
   height:150px;
   .backdrop {
-    @include background-image(linear-gradient(180deg, rgba(0,0,0,0), rgba(0,0,0,0.4)));
+    background-image: -webkit-linear-gradient(-450deg, transparent, rgba(0, 0, 0, 0.4));
+    background-image: linear-gradient(180deg, transparent, rgba(0, 0, 0, 0.4));
     filter:progid:DXImageTransform.Microsoft.Gradient(gradientType=0, startColorStr="#00ffffff", endColorStr="#77000000")\9;
     z-index:9;
     width:100%;
