--- a/app/views/client/room/view.html.erb
+++ b/app/views/client/room/view.html.erb
@@ -15,8 +15,8 @@
     </uib-carousel>
   </div>
   <div id="top-carousel-images" blueimp-gallery-img>
-    <a href="{{img.url}}" ng-repeat="img in room_images">
-      <img ng-src="{{img.url}}">
+    <a href="{{img}}" ng-repeat="img in room_images">
+      <img ng-src="{{img}}">
     </a>
   </div>
 
