[작업] client - 문구수정

--- a/app/views/client/home/main.html.erb
+++ b/app/views/client/home/main.html.erb
@@ -28,7 +28,7 @@
         <div class="bg" ng-style="{'background-image':'url({{etc[1]}})'}">
           <div class="alpha">
             <div class="ctt">
-              <span class="tit">관광지</span><i class="fa fa-arrow-right fa-3x"></i>
+              <span class="tit">정원둘러보기</span><i class="fa fa-arrow-right fa-3x"></i>
             </div>
           </div>
         </div>
