--- a/app/views/client/home/reserve.html.erb
+++ b/app/views/client/home/reserve.html.erb
@@ -7,29 +7,26 @@
   <table>
     <tr>
     	<th>객실명</th>
-    	<th>평수(/개별마당)</th>
+    	<th>건물타입</th>
     	<th>기준</th>
     	<th>최대</th>
-    	<th>주중</th>
-    	<th>금요일</th>
-    	<th>주말</th>
+    	<th>주중(일~목)</th>
+    	<th>주말(금~토)</th>
     </tr>
     <tr>
     	<td>W101</td>
-    	<td>12평/10평</td>
-    	<td>15명</td>
-    	<td>20명</td>
-    	<td>50만원</td>
-    	<td>55만원</td>
+    	<td>55평(방3)</td>
+    	<td>6명</td>
+    	<td>12명</td>
+    	<td>40만원</td>
     	<td>50만원</td>
     </tr>
     <tr>
     	<td>W102</td>
-    	<td>12평/10평</td>
-    	<td>15명</td>
-    	<td>20명</td>
-    	<td>50만원</td>
-    	<td>55만원</td>
+    	<td>55평(방3)</td>
+    	<td>6명</td>
+    	<td>12명</td>
+    	<td>40만원</td>
     	<td>50만원</td>
     </tr>
   </table>
