[작업] client - 문구및 여러개 업데이트

--- a/app/views/client/home/garden.html.erb
+++ b/app/views/client/home/garden.html.erb
@@ -2,14 +2,14 @@
 
 <div class="content-cont">
   <div class="top-ctt">
-    <p class="p-1">아름다운 향기를 담아 갈 수 있는 곳</p>
+    <p class="p-1">제주도의 자연을 함축하고 싶었던 산책로</p>
     <p class="phr p-2">
-    앞마당에 펼쳐진 남태평양의 수평선 자락에 설문대할망께서 빨래판삼아 빨래하셨다는 지귀도, <br>
-    그리고 마당 경계로 이어지는 조용한 올레5길을 따라 놓여 있는 아름다운 향기를 담아가실 수 있도록...<br>
-      3,800여평의 정원과 조용하고 편안한 별장, <b>위미향</b>에서 편안한 쉼을 제공하고자 합니다. 
+    &nbsp;동쪽으로는 카나리아와 도시로가 어우러진 아담한 열대수림, 편안한 휴식공간을 묵묵히 지켜주는 수문장 역할의 소나무, 그리고 사이사이 비어 있는 공간을 운치있게 채워주는 야생나무들.<br>
+    &nbsp;서쪽으로는 건물 옆에 우뚝 자리한 향나무가 버티어주고, 대지의 대부분을 차지한 자연상태로 보존하고 싶은 갈대밭, 그리고 외롭지 않게 일열로 나란히 서있는 젊은 도시로들, 그들 사이로 보이는 한라산 정상.
     </p>
-    <p class="phr p-3">고가의 가구나 장식은 없지만 청결하고 포근한 공간이 되도록 세심한 배려를 하겠습니다.<br>
-    감사합니다.
+    <p class="phr p-3">
+    이런 벗들이 어우러진, 편안하고 사색에 잠길 수 있는 산책로입니다.<br>
+    마지막으로 무농약 귤나무무리들이 잠시 쉬어가라고 합니다.
     </p>
   </div>
   <div class="room-list">
@@ -23,8 +23,7 @@
         </uib-carousel>
       </div>
       <div class="r-cont">
-        <span class="name">1층(1F)</span>
-        <span class="info">방1(4평), 거실, 화장실2, 주방, 세탁실</span>
+        <span class="name">동쪽 정원(2,600여평)</span>
       </div>
     </div>
     <div class="room">
@@ -37,8 +36,7 @@
         </uib-carousel>
       </div>
       <div class="r-cont">
-        <span class="name">2층(2F)</span>
-        <span class="info">방2(각 4평), 거실, 화장실1, 테라스, 욕탕, 베란다</span>
+        <span class="name">서쪽 정원(1,200여평)</span>
       </div>
     </div>
   </div>
