--- a/app/views/client/home/reserve.html.erb
+++ b/app/views/client/home/reserve.html.erb
@@ -30,17 +30,16 @@
     	<td>50만원</td>
     </tr>
   </table>
-  <div class="mini">인원추가 요금: 미취학아동(1인/10,000원), 초등학생부터(1인/20,000원)</div>
-  <div class="mini">유아도 인원수에 포함되며 10,000원의 추가요금이 있습니다.</div>
+  <div class="mini">인원추가 요금: 초등학생부터(1인/20,000원)</div>
 
   <div class="contact">
     <div class="item">
       <span class="tit">예약문의전화</span>
-      <span class="ctt">010-0000-0000</span>
+      <span class="ctt">010-2744-5023</span>
     </div>
     <div class="item">
       <span class="tit">카카오톡 아이디</span>
-      <span class="ctt">ooooooo</span>
+      <span class="ctt">wimihyang</span>
     </div>
   </div>
   <h3 class="subtit">객실 이용시 확인사항</h3>
@@ -51,7 +50,7 @@
       <ul class="sub-list">
         <li>설거지를 하신후 그릇은 건조대에 그대로 두시기 바랍니다.</li>
         <li>쓰레기는 비치해둔 분리수거통에 담아서 현관 앞에 놔두시기 바랍니다.</li>
-        <li>객실비품은 어메니티를 제외하고 반출하실 수 없습니다.</li>
+        <li>객실비품은 반출하실 수 없습니다.</li>
       </ul>
     </li>
     <li>쾌적한 공간이용을 위하여 실내에서의 튀김, 생선요리, 고기 등 기름기가 많은 음식조리를 금합니다.</li>
