--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -41,7 +41,7 @@
       <ul class="menu-cont" uib-collapse="!menuCollapse && isMobileWidth">
         <li class="<%="active" if @menu[:home].include?(@current_uri) %>"><a href="<%=client_home_path%>"><span>홈</span></a></li>
         <li class="<%="active" if @menu[:room].include?(@current_uri) %>"><a href="<%=room_index_path%>"><span>펜션둘러보기</span></a></li>
-        <li class="<%="active" if @menu[:special].include?(@current_uri) %>"><a href="<%=client_tour_path%>"><span>정원둘러보기</span></a></li>
+        <li class="<%="active" if @menu[:garden].include?(@current_uri) %>"><a href="<%=client_garden_path%>"><span>정원둘러보기</span></a></li>
         <li class="<%="active" if @menu[:reserve].include?(@current_uri) %>"><a href="<%=client_reserve_path%>"><span>예약</span></a></li>
         <li class="<%="active" if @menu[:customer].include?(@current_uri) %>"><a href="<%=client_notice_path%>"><span>고객센터</span></a></li>
       </ul>
@@ -54,8 +54,7 @@
       <div class="cont">
         <div class="ctt">
           상호 : 위미향 / 제주 서귀포시 남원읍 위미중앙로246번길 10<br>
-          예약문의 : 010-0000-0000 / 카카오톡 아이디 : oooooo<br>
-          대표: OOO / 사업자등록번호 : 000-00-00000 / 통신판매업신고번호 : <br>
+          예약문의 : 010-2744-5023 / 카카오톡 아이디 : wimihyang
           <div class="copyright">
             Copyright &copy; 위미향.&nbsp;&nbsp;ALL&nbsp;&nbsp;RIGHTS&nbsp;&nbsp;RESERVED.
           </div>
