--- a/app/assets/stylesheets/client/home/garden.scss
+++ b/app/assets/stylesheets/client/home/garden.scss
@@ -6,9 +6,13 @@
   padding:30px 0 50px;
   .top-ctt {
     padding:0 15px;
+    margin:0 auto;
+    max-width:700px;
     p {
       margin:0 auto 24px;
       text-align:center;
+    }
+    .p-2 {
     }
     .p-1 {
       font-size:20px;
