[작업] client - 이미지

--- a/app/views/client/home/main.html.erb
+++ b/app/views/client/home/main.html.erb
@@ -24,7 +24,7 @@
           </div>
         </div>
       </div>
-      <div class="mn r" url="<%=client_tour_path%>">
+      <div class="mn r" url="<%=client_garden_path%>">
         <div class="bg" ng-style="{'background-image':'url({{etc[1]}})'}">
           <div class="alpha">
             <div class="ctt">
