[작업] client - 글자

--- a/app/views/client/room/index.html.erb
+++ b/app/views/client/room/index.html.erb
@@ -24,7 +24,7 @@
       </div>
       <div class="r-cont">
         <span class="name">1층(1F)</span>
-        <span class="info">방1(4평), 거실, 화장실2, 주방, 세탁실</span>
+        <span class="info">방1(4평), 거실, 화장실2, 주방, 베란다</span>
       </div>
     </div>
     <div class="room">
