[작업] client - 핸드폰 번호 변경

--- a/app/views/client/home/reserve.html.erb
+++ b/app/views/client/home/reserve.html.erb
@@ -35,7 +35,7 @@
   <div class="contact">
     <div class="item">
       <span class="tit">예약문의전화</span>
-      <span class="ctt">010-2744-5023</span>
+      <span class="ctt"><%=@phone%></span>
     </div>
     <div class="item">
       <span class="tit">카카오톡 아이디</span>
