--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -54,7 +54,7 @@
       <div class="cont">
         <div class="ctt">
           상호 : 위미향 / 제주 서귀포시 남원읍 위미중앙로246번길 10<br>
-          예약문의 : 010-2744-5023 / 카카오톡 아이디 : wimihyang
+          예약문의 : <%=@phone%> / 카카오톡 아이디 : wimihyang
           <div class="copyright">
             Copyright &copy; 위미향.&nbsp;&nbsp;ALL&nbsp;&nbsp;RIGHTS&nbsp;&nbsp;RESERVED.
           </div>
