footer 사업자등록번호

--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -53,7 +53,8 @@
     <div class="ps-footer">
       <div class="cont">
         <div class="ctt">
-          상호 : 위미향 / 제주 서귀포시 남원읍 위미중앙로246번길 10<br>
+          상호 : 위미향 / 사업자등록번호 : 781-41-00155<br>
+          제주특별자치도 서귀포시 남원읍 위미중앙로246번길 10<br>
           예약문의 : <%=@phone%> / 카카오톡 아이디 : wimihyang
           <div class="copyright">
             Copyright &copy; 위미향.&nbsp;&nbsp;ALL&nbsp;&nbsp;RIGHTS&nbsp;&nbsp;RESERVED.
